--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
    <p>Radio check. Pilot, please confirm.</p>
    <p>Hey You!</p>
-</body>
    <p>Confirm. Reading you loud and clear!</p>
+   <p>Great job, team!</p>
+</body>
 </html>
